--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -5,12 +5,13 @@
     <title>HARMOLOID</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
     <link rel="stylesheet" type="text/css" href="fileDrop.css"/>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z2HC1531L7"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-SWS8FYED4G');
+      gtag('config', 'G-Z2HC1531L7');
     </script>
 </head>
 <body>
